--- a/mypy.ini
+++ b/mypy.ini
@@ -91,3 +91,7 @@ ignore_missing_imports = True
 [mypy-pytvision.*]
 
 ignore_missing_imports = True
+
+[mypy-omegaconf.*]
+
+ignore_missing_imports = True
